# widelands-website

./: .bzrignore  .editorconfig  .gitignore  Database_affected_changes.txt  Makefile  Pipfile  README.md  README.sirver  README.txt  atomformat.py.delete  diff_match_patch.py  docker-compose.yml  format.sh  local_settings.py.sample  local_urls.py.sample  manage.py  online_users_middleware.py  pip_requirements.txt  pyproject.toml  python3.txt  settings.py  sitemap_urls.py  sitemaps.py  sitemaps_urls.py  static_sitemap.py  update_docs.py  update_problems.txt  urls.py  wl_utils.py  wlmetaserver.py  wlwebsite_wsgi.py
_ops/: apt_update.sh  create_docs.py  fix_formatting.py  move_docs.py  update_docs.py
akismet-0.2.0/: README.txt  apikey.txt  setup.py
anti_spam/: admin.py  anti_spam_utils.py  models.py  urls.py  views.py
check_input/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
django_messages_wl/: apps.py  forms.py  management.py  urls.py  views.py
djangoratings/: LICENSE  __init__.py  admin.py  default_settings.py  exceptions.py  fields.py  forms.py  managers.py  models.py  runtests.py  tests.py  views.py
documentation/: conf.py  views.py
images/: admin.py  models.py  urls.py  views.py
mainpage/: admin.py  context_processors.py  feed_urls.py  forms.py  mainpage_urls.py  online_users_middleware.py  settings.py  sitemap_urls.py  sitemaps.py  static_sitemap.py  tests.py  urls.py  validators.py  views.py  wl_utils.py  wlwebsite_wsgi.py
news/: README.txt  admin.py  feed_urls.py  feeds.py  managers.py  models.py  search_indexes.py  sitemap.py  tests.py  urls.py  views.py  views.py.delete
notification/: README  __init__.py  admin.py  atomformat.py  context_processors.py  decorators.py  engine.py  feeds.py  lockfile.py  models.py  urls.py  views.py
online_help/: models.py  urls.py  views.py
privacy_policy/: admin.py  apps.py  models.py  urls.py  views.py
pybb/: README  admin.py  apps.py  feed_urls.py  feeds.py  forms.py  models.py  notifications.py  orm.py  search_indexes.py  settings.py  signals.py  sitemap.py  unread.py  urls.py  urls.py.orig  util.py  views.py
sphinxdoc/: admin.py  models.py  sitemap.py  urls.py  views.py
templates/: 404.html  500.html  base.html  footer.html  header.html  left_boxes.html  login_box.html  (+6 more)
(+739 files in other folders)
